--- a/RaiseMan2/RaiseMan2/Base.lproj/Main.storyboard
+++ b/RaiseMan2/RaiseMan2/Base.lproj/Main.storyboard
@@ -10,11 +10,11 @@
                 <application id="hnw-xV-0zn" sceneMemberID="viewController">
                     <menu key="mainMenu" title="Main Menu" systemMenu="main" id="AYu-sK-qS6">
                         <items>
-                            <menuItem title="RaiseMan" id="1Xt-HY-uBw">
+                            <menuItem title="RaiseMan2" id="1Xt-HY-uBw">
                                 <modifierMask key="keyEquivalentModifierMask"/>
-                                <menu key="submenu" title="RaiseMan" systemMenu="apple" id="uQy-DD-JDr">
+                                <menu key="submenu" title="RaiseMan2" systemMenu="apple" id="uQy-DD-JDr">
                                     <items>
-                                        <menuItem title="About RaiseMan" id="5kV-Vb-QxS">
+                                        <menuItem title="About RaiseMan2" id="5kV-Vb-QxS">
                                             <modifierMask key="keyEquivalentModifierMask"/>
                                             <connections>
                                                 <action selector="orderFrontStandardAboutPanel:" target="Ady-hI-5gd" id="Exp-CZ-Vem"/>
@@ -28,7 +28,7 @@
                                             <menu key="submenu" title="Services" systemMenu="services" id="hz9-B4-Xy5"/>
                                         </menuItem>
                                         <menuItem isSeparatorItem="YES" id="4je-JR-u6R"/>
-                                        <menuItem title="Hide RaiseMan" keyEquivalent="h" id="Olw-nP-bQN">
+                                        <menuItem title="Hide RaiseMan2" keyEquivalent="h" id="Olw-nP-bQN">
                                             <connections>
                                                 <action selector="hide:" target="Ady-hI-5gd" id="PnN-Uc-m68"/>
                                             </connections>
@@ -46,7 +46,7 @@
                                             </connections>
                                         </menuItem>
                                         <menuItem isSeparatorItem="YES" id="kCx-OE-vgT"/>
-                                        <menuItem title="Quit RaiseMan" keyEquivalent="q" id="4sb-4s-VLi">
+                                        <menuItem title="Quit RaiseMan2" keyEquivalent="q" id="4sb-4s-VLi">
                                             <connections>
                                                 <action selector="terminate:" target="Ady-hI-5gd" id="Te7-pn-YzF"/>
                                             </connections>
@@ -627,7 +627,7 @@
                                 <modifierMask key="keyEquivalentModifierMask"/>
                                 <menu key="submenu" title="Help" systemMenu="help" id="F2S-fz-NVQ">
                                     <items>
-                                        <menuItem title="RaiseMan Help" keyEquivalent="?" id="FKE-Sm-Kum">
+                                        <menuItem title="RaiseMan2 Help" keyEquivalent="?" id="FKE-Sm-Kum">
                                             <connections>
                                                 <action selector="showHelp:" target="Ady-hI-5gd" id="y7X-2Q-9no"/>
                                             </connections>
@@ -672,91 +672,88 @@
                         <rect key="frame" x="0.0" y="0.0" width="480" height="270"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <subviews>
-                            <scrollView fixedFrame="YES" autohidesScrollers="YES" horizontalLineScroll="19" horizontalPageScroll="10" verticalLineScroll="19" verticalPageScroll="10" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ew0-hi-Gzc">
-                                <rect key="frame" x="20" y="20" width="287" height="230"/>
-                                <clipView key="contentView" misplaced="YES" id="UPN-vg-aAG">
+                            <scrollView fixedFrame="YES" autohidesScrollers="YES" horizontalLineScroll="19" horizontalPageScroll="10" verticalLineScroll="19" verticalPageScroll="10" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PGX-s4-RHy">
+                                <rect key="frame" x="20" y="20" width="298" height="230"/>
+                                <clipView key="contentView" misplaced="YES" id="Qtb-JR-gNY">
                                     <rect key="frame" x="1" y="0.0" width="238" height="134"/>
                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                     <subviews>
-                                        <tableView verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="lastColumnOnly" columnSelection="YES" multipleSelection="NO" autosaveColumns="NO" headerView="O2e-Al-E8w" id="tvZ-pu-cwq">
-                                            <rect key="frame" x="0.0" y="0.0" width="285" height="19"/>
+                                        <tableView verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="lastColumnOnly" columnSelection="YES" multipleSelection="NO" autosaveColumns="NO" headerView="SWQ-3e-e0a" id="bCx-by-Fjf">
+                                            <rect key="frame" x="0.0" y="0.0" width="238" height="134"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <size key="intercellSpacing" width="3" height="2"/>
                                             <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                             <color key="gridColor" name="gridColor" catalog="System" colorSpace="catalog"/>
                                             <tableColumns>
-                                                <tableColumn width="116" minWidth="40" maxWidth="1000" id="sQV-wZ-qJ7">
+                                                <tableColumn width="116" minWidth="40" maxWidth="1000" id="iyX-SS-yLo">
                                                     <tableHeaderCell key="headerCell" lineBreakMode="truncatingTail" borderStyle="border" alignment="left">
                                                         <font key="font" metaFont="smallSystem"/>
                                                         <color key="textColor" name="headerTextColor" catalog="System" colorSpace="catalog"/>
                                                         <color key="backgroundColor" name="headerColor" catalog="System" colorSpace="catalog"/>
                                                     </tableHeaderCell>
-                                                    <textFieldCell key="dataCell" lineBreakMode="truncatingTail" selectable="YES" editable="YES" alignment="left" title="Text Cell" id="I8R-gU-9f2">
+                                                    <textFieldCell key="dataCell" lineBreakMode="truncatingTail" selectable="YES" editable="YES" alignment="left" title="Text Cell" id="eNj-P4-mGu">
                                                         <font key="font" metaFont="system"/>
                                                         <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
                                                         <color key="backgroundColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
                                                     </textFieldCell>
                                                     <tableColumnResizingMask key="resizingMask" resizeWithTable="YES" userResizable="YES"/>
                                                     <connections>
-                                                        <binding destination="3VX-VT-hED" name="value" keyPath="arrangedObjects.personName" id="IjY-Eb-l60"/>
+                                                        <binding destination="IZt-07-EAv" name="value" keyPath="arrangedObjects.personName" id="dVx-sf-k6m"/>
                                                     </connections>
                                                 </tableColumn>
-                                                <tableColumn width="163" minWidth="40" maxWidth="1000" id="Dmq-bc-eF9">
+                                                <tableColumn width="174" minWidth="40" maxWidth="1000" id="s4x-UZ-TV3">
                                                     <tableHeaderCell key="headerCell" lineBreakMode="truncatingTail" borderStyle="border" alignment="left">
                                                         <font key="font" metaFont="smallSystem"/>
                                                         <color key="textColor" name="headerTextColor" catalog="System" colorSpace="catalog"/>
                                                         <color key="backgroundColor" name="headerColor" catalog="System" colorSpace="catalog"/>
                                                     </tableHeaderCell>
-                                                    <textFieldCell key="dataCell" lineBreakMode="truncatingTail" selectable="YES" editable="YES" alignment="left" title="Text Cell" id="RZI-Rv-gtL">
-                                                        <numberFormatter key="formatter" formatterBehavior="default10_4" numberStyle="percent" lenient="YES" minimumIntegerDigits="1" maximumIntegerDigits="2000000000" id="NkT-Xz-drZ">
+                                                    <textFieldCell key="dataCell" lineBreakMode="truncatingTail" selectable="YES" editable="YES" alignment="left" title="Text Cell" id="IDj-9c-ni6">
+                                                        <numberFormatter key="formatter" formatterBehavior="default10_4" numberStyle="percent" lenient="YES" minimumIntegerDigits="1" maximumIntegerDigits="2000000000" id="x0e-U2-iO4">
                                                             <integer key="multiplier" value="100"/>
                                                         </numberFormatter>
                                                         <font key="font" metaFont="system"/>
                                                         <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
                                                         <color key="backgroundColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
-                                                        <connections>
-                                                            <binding destination="3VX-VT-hED" name="value" keyPath="arrangedObjects.expectedRaise" id="5UU-Xm-1Ei"/>
-                                                        </connections>
                                                     </textFieldCell>
                                                     <tableColumnResizingMask key="resizingMask" resizeWithTable="YES" userResizable="YES"/>
                                                     <connections>
-                                                        <binding destination="3VX-VT-hED" name="value" keyPath="arrangedObjects.expectedRaise" id="JAj-e7-gac"/>
+                                                        <binding destination="IZt-07-EAv" name="value" keyPath="arrangedObjects.expectedRaise" id="rs8-iY-oQ3"/>
                                                     </connections>
                                                 </tableColumn>
                                             </tableColumns>
                                             <connections>
-                                                <binding destination="3VX-VT-hED" name="content" keyPath="arrangedObjects" id="Xpo-Zk-7yu"/>
+                                                <binding destination="5gI-5U-AMq" name="enabled" keyPath="employees" id="MsV-Xf-s7O"/>
                                             </connections>
                                         </tableView>
                                     </subviews>
                                     <color key="backgroundColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
                                 </clipView>
-                                <scroller key="horizontalScroller" hidden="YES" verticalHuggingPriority="750" horizontal="YES" id="zDy-01-xD8">
+                                <scroller key="horizontalScroller" hidden="YES" verticalHuggingPriority="750" horizontal="YES" id="RIp-qI-Ga4">
                                     <rect key="frame" x="1" y="119" width="223" height="15"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                 </scroller>
-                                <scroller key="verticalScroller" hidden="YES" verticalHuggingPriority="750" doubleValue="1" horizontal="NO" id="tU5-4v-Lo2">
+                                <scroller key="verticalScroller" hidden="YES" verticalHuggingPriority="750" horizontal="NO" id="Cku-Ur-YvA">
                                     <rect key="frame" x="224" y="17" width="15" height="102"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                 </scroller>
-                                <tableHeaderView key="headerView" id="O2e-Al-E8w">
+                                <tableHeaderView key="headerView" id="SWQ-3e-e0a">
                                     <rect key="frame" x="0.0" y="0.0" width="238" height="17"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                 </tableHeaderView>
                             </scrollView>
-                            <button verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="xaE-Ot-FTu">
-                                <rect key="frame" x="328" y="222" width="129" height="32"/>
-                                <buttonCell key="cell" type="push" title="Add employee" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="Rg6-ta-zuY">
+                            <button verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="VRn-c8-YL7">
+                                <rect key="frame" x="330" y="222" width="136" height="32"/>
+                                <buttonCell key="cell" type="push" title="Add Employee" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="zhh-Fl-knl">
                                     <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                                     <font key="font" metaFont="system"/>
                                 </buttonCell>
                                 <connections>
-                                    <action selector="add:" target="3VX-VT-hED" id="eAT-fX-69B"/>
+                                    <action selector="add:" target="IZt-07-EAv" id="uVI-FC-FAw"/>
                                 </connections>
                             </button>
-                            <button verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="rct-1V-DdA">
-                                <rect key="frame" x="328" y="189" width="129" height="32"/>
-                                <buttonCell key="cell" type="push" title="Remove" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="RTb-gq-IU3">
+                            <button verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="BQ6-NQ-Nz5">
+                                <rect key="frame" x="330" y="189" width="136" height="32"/>
+                                <buttonCell key="cell" type="push" title="Remove" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="BkB-iY-2wB">
                                     <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                                     <font key="font" metaFont="system"/>
                                     <string key="keyEquivalent" base64-UTF8="YES">
@@ -764,35 +761,24 @@ CA
 </string>
                                 </buttonCell>
                                 <connections>
-                                    <action selector="remove:" target="3VX-VT-hED" id="uxA-d1-nal"/>
-                                    <binding destination="3VX-VT-hED" name="enabled" keyPath="canRemove" id="KgD-bc-pOU"/>
+                                    <action selector="remove:" target="IZt-07-EAv" id="NBb-qs-frx"/>
+                                    <binding destination="IZt-07-EAv" name="enabled" keyPath="canRemove" id="h4o-nP-AWK"/>
                                 </connections>
                             </button>
-                            <textField verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="HtT-Xe-O99">
-                                <rect key="frame" x="344" y="158" width="96" height="22"/>
-                                <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" state="on" borderStyle="bezel" drawsBackground="YES" id="anp-oW-3oT">
-                                    <font key="font" metaFont="system"/>
-                                    <color key="textColor" name="textColor" catalog="System" colorSpace="catalog"/>
-                                    <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
-                                </textFieldCell>
-                                <connections>
-                                    <binding destination="3VX-VT-hED" name="value" keyPath="selection.personName" id="CuH-5v-PfU"/>
-                                </connections>
-                            </textField>
                         </subviews>
                     </view>
                 </viewController>
                 <customObject id="2Tp-Fl-jBw" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
-                <arrayController objectClassName="Person" id="3VX-VT-hED">
+                <arrayController objectClassName="Person" id="IZt-07-EAv">
                     <declaredKeys>
                         <string>personName</string>
                         <string>expectedRaise</string>
                     </declaredKeys>
                     <connections>
-                        <binding destination="twK-pU-Gq0" name="contentArray" keyPath="employees" id="v0P-H9-6Pr"/>
+                        <binding destination="5gI-5U-AMq" name="contentArray" keyPath="employees" id="1jp-WA-AGx"/>
                     </connections>
                 </arrayController>
-                <customObject id="twK-pU-Gq0" customClass="Document"/>
+                <userDefaultsController representsSharedInstance="YES" id="DNO-ye-Kic"/>
             </objects>
             <point key="canvasLocation" x="75" y="655"/>
         </scene>
